Fixed bug #31139 (XML Parser Functions seem to drop &amp; when parsing)